# BlogSnippets

./: .gitignore  README.md
SDLCmake/: CMakeLists.txt
SDLCmake/source/: CMakeLists.txt  main.cpp
